--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="space photos from NASA"
+      content="Bringing you a collection of space photos from the NASA API."
+    />
+      <meta
+      name="keywords"
+      content="space-pics, space pics, space photos, space pictures, space images"
+    />
+     <meta
+      name="author"
+      content="ogwenya"
     />
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
